--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Parent Page</title>
 </head>
 <body>
-  <iframe id="myIframe" src="iframe.html" width="400" height="200"></iframe>
+  <iframe id="myIframe" src="https://storage.googleapis.com/crisp-dev-test/iframe.html" width="400" height="200"></iframe>
 </body>
 </html>
